Add home button functionality and update UI components; enhance navigation in CV application

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ build/
 ### GitHub Copilot ###
 .copilot/
 .copilot.*
+.idea/copilot.data.migration.agent.xml
+.idea/copilot.data.migration.ask.xml
+.idea/copilot.data.migration.edit.xml
+.idea/copilot.data.migration.ask2agent.xml
+
